--- a/app/assets/stylesheets/components/banner.scss
+++ b/app/assets/stylesheets/components/banner.scss
@@ -84,7 +84,7 @@
   }
 
   &-action {
-    
+
     display: block;
     text-align: right;
     float: right;
@@ -115,14 +115,14 @@
   background: $govuk-blue;
   color: $white;
   margin-top: $gutter;
-  padding: $gutter * 2;
+  padding: $gutter;
 
   .heading-large {
     margin: 0 0 $gutter 0;
   }
 
   p {
-    
+
     margin-bottom: $gutter;
 
     &:last-child {
@@ -142,6 +142,7 @@
     background-image: file-url('tour-next.png');
     background-size: auto 24px;
     padding: 0 23px 0 0;
+    margin: $gutter 0 0 0;
     background-position: right 3px;
     background-repeat: no-repeat;
 
