--- a/app/templates/views/tour/1.html
+++ b/app/templates/views/tour/1.html
@@ -10,16 +10,25 @@
 {% block maincolumn_content %}
 
   {% call banner_wrapper(type='tour') %}
-	<h2 class="heading-large">{{ heading }}</h2>
-	<p>
-		To start off with, you can only send messages to yourself.
-	</p>
-	<p>
-		We can remove these restrictions when you’re ready.
-	</p>
-    <a href='{{ url_for('.tour', page=next_page) }}'>
-      Next
-    </a>
+  <div class="grid-row">
+    <div class="column-one-third">
+      <h2 class="heading-medium">Start with a template</h2>
+      <div style="
+        background: #fff;
+        border: 2px solid #123;
+        color: #000;
+        padding: 10px;
+      ">
+        Thanks for sending your <span class="placeholder">((document))</span>.
+        We’ve started processing your application. You should hear back from us
+        within two weeks.
+      </div>
+      <a href='{{ url_for('.tour', page=next_page) }}'>
+        Next
+      </a>
+    </div>
+  </div>
+
   {% endcall %}
 
 {% endblock %}
