--- a/app/templates/views/tour/3.html
+++ b/app/templates/views/tour/3.html
@@ -10,31 +10,85 @@
 {% block maincolumn_content %}
 
   {% call banner_wrapper(type='tour') %}
-	<h2 class="heading-large">{{ heading }}</h2>
-	<p>
-		Add recipients by uploading a .csv spreadsheet:
-	</p>
-	<p>
-	    <picture>
-		  <source
-			  type="image/svg+xml"
-			  srcset="/static/images/tour/{{ current_page }}.svg"
-			  alt="A screenshot of a spreadsheet containing data about three people"
-			  width="554" height="118"
-		  >
-		  <img
-			src="/static/images/tour/{{ current_page }}.png"
-			width="554" height="118"
-			alt="A screenshot of a spreadsheet containing data about three people"
-		  >
-		</picture>
-	</p>
-	<p>
-		Developers, you can add data automatically using an API
-	</p>
-    <a href='{{ url_for('.tour', page=next_page) }}'>
-      Next
-    </a>
+  <div class="grid-row">
+    <div class="column-one-third">
+      <h2 class="heading-medium">Start with a template</h2>
+      <div style="
+        background: #fff;
+        border: 2px solid #123;
+        color: #000;
+        padding: 10px;
+      ">
+        Thanks for sending your <span class="placeholder">((document))</span>.
+        We’ve started processing your application. You should hear back from us
+        within two weeks.
+      </div>
+      <a href='{{ url_for('.tour', page=next_page) }}'>
+        Next
+      </a>
+    </div>
+    <div class="column-one-third">
+      <h2 class="heading-medium">Add your recipients</h2>
+      <table style="
+        background: #fff;
+        border: 2px solid #123;
+        color: #000;
+        padding: 10px;
+      ">
+        <thead>
+          <tr style="background: #ddd;">
+            <td>phone number</td>
+            <td>document</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>07900900321</td>
+            <td>passport</td>
+          </tr>
+          <tr>
+            <td>07900900321</td>
+            <td>proof of address</td>
+          </tr>
+          <tr>
+            <td>07900900321</td>
+            <td>driving license</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="column-one-third">
+      <div style="">
+        <h2 class="heading-medium">Send your messages</h2>
+        <div style="
+          background: #000;
+          border-radius: 10px;
+          padding: 10px;
+        ">
+          <div style="
+            background: #fff; color: #000;
+            min-height: 377px;
+            border-radius: 3px;
+          ">
+            <div style="height: 30px; background: #ddd;"></div>
+            <div style="padding: 5px; margin: 10px;background: #ddd; border-radius: 3px;">
+              Thanks for sending your passport.
+              We’ve started processing your application. You should hear back from us
+              within two weeks.
+            </div>
+          </div>
+          <div style="
+            margin: 10px auto 0;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            background: rgba(255, 255, 255, 0.2);
+          ">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   {% endcall %}
 
 {% endblock %}
