--- a/app/assets/stylesheets/components/banner.scss
+++ b/app/assets/stylesheets/components/banner.scss
@@ -115,7 +115,9 @@
   background: $govuk-blue;
   color: $white;
   margin-top: $gutter;
-  padding: $gutter;
+  margin-bottom: $gutter * -3;
+  padding: 0 $gutter $gutter $gutter;
+  min-height: 550px;
 
   .heading-large {
     margin: 0 0 $gutter 0;
