--- a/app/templates/views/tour/1.html
+++ b/app/templates/views/tour/1.html
@@ -12,14 +12,14 @@
   {% call banner_wrapper(type='tour') %}
   <div class="grid-row">
     <div class="column-one-third">
-      <h2 class="heading-medium">Start with a template</h2>
+      <h2 class="heading-medium" style="font-weight:normal">Start with a template</h2>
       <div style="
         background: #fff;
         border: 2px solid #123;
         color: #000;
         padding: 10px;
       ">
-        Thanks for sending your <span class="placeholder">((document))</span>.
+        Thanks for sending your <span class="placeholder">document</span>.
         We’ve started processing your application. You should hear back from us
         within two weeks.
       </div>
