--- a/app/templates/views/tour/3.html
+++ b/app/templates/views/tour/3.html
@@ -63,16 +63,22 @@
         <h2 class="heading-medium" style="font-weight:normal">We send your messages</h2>
         <div style="
           background: #000;
-          border-radius: 10px;
-          padding: 10px;
+          border-radius: 15px;
+          padding: 15px;
         ">
+          <div style="
+            margin: 5px auto 20px;
+            border-radius: 5px;
+            width: 30px;
+            height: 7px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
           <div style="
             background: #fff; color: #000;
             min-height: 377px;
-            border-radius: 3px;
+            border-radius: 1px;
           ">
-            <div style="height: 30px; background: #ddd;"></div>
-            <p style="margin: 10px 0 5px 7px; color: #6f777b;font-size: 16px;">To: 07900900321</p>
+            <p style="margin: 0 0 5px 7px; padding-top: 10px; color: #6f777b; font-size: 16px;">To: 07900900321</p>
             <div style="padding: 10px; margin: 10px;background: #ddd; border-radius: 5px;">
               Thanks for sending your passport.
               We’ve started processing your application. You should hear back from us
@@ -81,12 +87,11 @@
           </div>
           <div style="
             margin: 10px auto 0;
-            border-radius: 50%;
+            border-radius: 25%;
             width: 30px;
             height: 30px;
             background: rgba(255, 255, 255, 0.2);
-          ">
-          </div>
+          "></div>
         </div>
       </div>
     </div>
