--- a/app/assets/stylesheets/components/banner.scss
+++ b/app/assets/stylesheets/components/banner.scss
@@ -117,7 +117,10 @@
   margin-top: $gutter;
   margin-bottom: $gutter * -3;
   padding: 0 $gutter $gutter $gutter;
-  min-height: 550px;
+  min-height: 400px;
+  max-height: 400px;
+  overflow: hidden;
+  box-shadow: inset 0 -1em 1.6em 0 rgba(0, 0, 0, 0.05);
 
   .heading-large {
     margin: 0 0 $gutter 0;
