--- a/app/templates/views/tour/4.html
+++ b/app/templates/views/tour/4.html
@@ -25,7 +25,7 @@
         <span class="placeholder">name</span>, thanks for sending your
         <span class="placeholder">document</span>.
         We’re processing your application. You should hear back from us
-        on <span class="placeholder">ETA</span>.
+        on <span class="placeholder">estimate</span>
       </div>
       <p>
         <a href='{{ url_for('.tour', page=next_page) }}'>
@@ -46,7 +46,7 @@
             <th class="table-field-heading">phone number</th>
             <th class="table-field-heading"><span class="placeholder">name</span></th>
             <th class="table-field-heading"><span class="placeholder">document</span></th>
-            <th class="table-field-heading"><span class="placeholder">ETA</span></th>
+            <th class="table-field-heading"><span class="placeholder">estimate</span></th>
           </tr>
         </thead>
         <tbody>
