--- a/app/templates/views/edit-sms-template.html
+++ b/app/templates/views/edit-sms-template.html
@@ -28,7 +28,7 @@
         <div class="column-one-third">
           <label for='template_content' class='placeholder-hint banner-mode' data-textboxes-selector='#template_content' data-target-textbox-selector="#template_content">
             <div class="" id="placeholder-hint" aria-live="polite">
-              <p>Define fields using ((double brackets))</p>
+              <p>Make a field by typing double brackets, eg ((name))</p>
             </div>
           </label>
         </div>
