--- a/app/assets/stylesheets/components/banner.scss
+++ b/app/assets/stylesheets/components/banner.scss
@@ -122,8 +122,8 @@
   overflow: hidden;
   box-shadow: inset 0 -1em 1.6em 0 rgba(0, 0, 0, 0.05);
 
-  .heading-large {
-    margin: 0 0 $gutter 0;
+  .heading-medium {
+    @include core-24;
   }
 
   p {
@@ -147,7 +147,7 @@
     background-image: file-url('tour-next.png');
     background-size: auto 24px;
     padding: 0 23px 0 0;
-    margin: $gutter 0 0 0;
+    margin: 0 0 $gutter 0;
     background-position: right 3px;
     background-repeat: no-repeat;
 
@@ -170,14 +170,17 @@
 
   }
 
-  img,
-  source {
-    max-width: 100%;
-    display: block;
+  th {
+    padding: inherit 5px;
+    background: $grey-3;
+    border-left: 5px solid $grey-3;
+    border-right: 5px solid $grey-3;
   }
 
-  &-image-flush-bottom {
-    margin: 40px 0 -60px 0;
+  tr:last-child {
+    td {
+      border: none;
+    }
   }
 
 }
