--- a/app/templates/views/tour/1.html
+++ b/app/templates/views/tour/1.html
@@ -10,22 +10,116 @@
 {% block maincolumn_content %}
 
   {% call banner_wrapper(type='tour') %}
+  <h2 class="heading-medium">Use GOV.UK Notify to send messages to your users</h2>
+  <a href='{{ url_for('.tour', page=next_page) }}'>
+    Next
+  </a>
   <div class="grid-row">
+
     <div class="column-one-third">
-      <h2 class="heading-medium" style="font-weight:normal">Start with a template</h2>
-      <div style="
-        background: #fff;
-        border: 2px solid #123;
-        color: #000;
-        padding: 10px;
-      ">
-        Thanks for sending your <span class="placeholder">document</span>.
-        We’ve started processing your application. You should hear back from us
-        within two weeks.
+      <div style="">
+        <div style="
+          background: #000;
+          border-radius: 15px;
+          padding: 15px;
+        ">
+          <div style="
+            margin: 5px auto 20px;
+            border-radius: 5px;
+            width: 30px;
+            height: 7px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+          <div style="
+            background: #fff; color: #000;
+            min-height: 377px;
+            border-radius: 1px;
+          ">
+            <p style="margin: 0 0 5px 7px; padding-top: 10px; color: #6f777b; font-size: 16px;">To: 07900911111</p>
+            <div style="padding: 10px; margin: 10px;background: #ddd; border-radius: 5px;">
+              Joshua, we’ve started processing your application. You should
+              hear back from us within two weeks.
+            </div>
+          </div>
+          <div style="
+            margin: 10px auto 0;
+            border-radius: 25%;
+            width: 30px;
+            height: 30px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+        </div>
       </div>
-      <a href='{{ url_for('.tour', page=next_page) }}'>
-        Next
-      </a>
+    </div>
+    <div class="column-one-third">
+      <div style="">
+        <div style="
+          background: #000;
+          border-radius: 15px;
+          padding: 15px;
+        ">
+          <div style="
+            margin: 5px auto 20px;
+            border-radius: 5px;
+            width: 30px;
+            height: 7px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+          <div style="
+            background: #fff; color: #000;
+            min-height: 377px;
+            border-radius: 1px;
+          ">
+            <p style="margin: 0 0 5px 7px; padding-top: 10px; color: #6f777b; font-size: 16px;">To: 07900922222</p>
+            <div style="padding: 10px; margin: 10px;background: #ddd; border-radius: 5px;">
+              Amala, we’ve started processing your application. You should hear back from us
+              within two weeks.
+            </div>
+          </div>
+          <div style="
+            margin: 10px auto 0;
+            border-radius: 25%;
+            width: 30px;
+            height: 30px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+        </div>
+      </div>
+    </div>
+    <div class="column-one-third">
+      <div>
+        <div style="
+          background: #000;
+          border-radius: 15px;
+          padding: 15px;
+        ">
+          <div style="
+            margin: 5px auto 20px;
+            border-radius: 5px;
+            width: 30px;
+            height: 7px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+          <div style="
+            background: #fff; color: #000;
+            min-height: 377px;
+            border-radius: 1px;
+          ">
+            <p style="margin: 0 0 5px 7px; padding-top: 10px; color: #6f777b; font-size: 16px;">To: 07900933333</p>
+            <div style="padding: 10px; margin: 10px;background: #ddd; border-radius: 5px;">
+              Roman, we’ve started processing your application. You should hear back from us
+              within two weeks.
+            </div>
+          </div>
+          <div style="
+            margin: 10px auto 0;
+            border-radius: 25%;
+            width: 30px;
+            height: 30px;
+            background: rgba(255, 255, 255, 0.2);
+          "></div>
+        </div>
+      </div>
     </div>
   </div>
 
