--- a/app/templates/views/tour/2.html
+++ b/app/templates/views/tour/2.html
@@ -37,7 +37,7 @@
             <p style="margin: 0 0 5px 7px; padding-top: 10px; color: #6f777b; font-size: 16px;">To: 07900911111</p>
             <div style="padding: 10px; margin: 10px;background: #ddd; border-radius: 5px;">
               Joshua, we’ve started processing your application. You should hear back from us
-              within two weeks.
+              by 4 June 2016.
             </div>
           </div>
           <div style="
@@ -60,7 +60,7 @@
       ">
         <span class="placeholder">((first name))</span>, we’ve started
         processing your application. You should hear back from us
-        within two weeks.
+        by <span class="placeholder">((date))</span>
       </div>
     </div>
   </div>
