--- a/app/assets/stylesheets/components/banner.scss
+++ b/app/assets/stylesheets/components/banner.scss
@@ -121,6 +121,7 @@
   max-height: 400px;
   overflow: hidden;
   box-shadow: inset 0 -1em 1.6em 0 rgba(0, 0, 0, 0.05);
+  position: relative;
 
   .heading-medium {
     @include core-24;
